# pbdoc-lib

./: README.md  pbdoc-teste.py  pyproject.toml
src/pbdoc_lib/: __init__.py  client.py  config.py  exceptions.py  models.py  requirements.txt
src/pbdoc_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pbdoc_lib/services/: extract_pbdoc_process_info.py
tests/: test_client.py  test_config.py  test_extract_pbdoc_process_info.py
