[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pbdoc-lib"
version = "0.1.0"
description = "Biblioteca reutilizável para automação do PBDoc com Selenium headless"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Seu Nome"}
]
dependencies = [
  "selenium>=4.18.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]
